1998-12-18  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* ArchivedGeometryWidget.m: Include defobj.h instead of declaring
	archiver interface functions.  Use 
	([ArchivedGeometryWidget -loadWindowGeometryRecord], 
	[ArchivedGeometryWidget -updateArchiver]): Use lispArchiver{Get,Put}
	instead of archiver{Get,Put}.

1998-12-11  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Colormap.m ([Colormap -setColor:ToRed:Green:Blue:]): Revert
	back to #RRGGBB format (for Cygwin Tk).

	* internal.[hm] (tkobjc_setColor): New function.  Use XParseColor
	for Win32.

	* Colormap.m ([Colormap -createEnd]): Remove reference to xwin.
	Display and screen are local.
	([Colormap -setColor:ToName:]): Use tkobjc_setColor instead of
	using X things directly.  Switch to virtual
	colormap and retry if XAllocColor fails -- don't revert to white.

	* Colormap.h (Colormap): Remove display and xwin.  Make tkwin
	public.

	* Makefile.am: Use OBJCFLAGS instead of CFLAGS, and add
	-Wno-implicit-int to OBJCFLAGS instead of CPPFLAGS.

1998-12-10  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Colormap.m ([Colormap -setColor:ToRed:Green:Blue:]): Scale to
	256 but trim at 255.  Use rgb:r/g/b syntax instead of #RRGGBB
	syntax.
	([Colormap -setColor:ToName:]): Use XLookupColor, using
	screen-matching instead of exact pixel values.

	* internal.m (x_get_managed_toplevel_window,
	x_set_private_colormap): New internal functions.
	(tkobjc_raster_setColormap): Sync up Tk things and call
	x_set_private_colormap if it is different from the default.

1998-11-19  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* WindowGeometryRecord.m ([WindowGeometryRecord -lispIn:]): Get
	value lists directly from index.
	(getValueList): Remove.

1998-11-18  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am: Add -Wno-implicit-int (but this may not be portable
	enough).

	* WindowGeometryRecord.[hm]: Remove lispInCreate: stub (will 
	inherit).

	* ArchivedGeometryWidget.h Button.h ButtonPanel.h Canvas.h